# Prism

./: .codecontext.yaml  .gitignore  AGENTS.md  ANNIHILATION_REPORT.md  DESIGN.md  FEATURE_RECOMMENDATIONS.md  HALLMARK_AUDIT.md  PRISM_VIDEO_PLAYER_ARCHITECTURE.md  PRODUCT.md  README.md  TODO.md  handoff.md  package-lock.json  package.json  pyproject.toml  run-desktop.sh  run-web.sh  todo.md
backend/: .gitignore  README.md  debug_listing.py  migrate.py  notify_update.py  prism_cli.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2d440541b3c2_add_face_det_score.py  6f3a1b2c4d5e_add_ai_summary_to_photos.py  a1b2c3d4e5f6_unify_runtime_schema.py  f425e8b05638_drop_settings_table.py
backend/app/: config.py  db.py  lifespan.py  main.py  models.py  schema_migrations.py
backend/app/agent/: Agent.md  embeddings.py  executor.py  llm.py  orchestrator.py  planner.py  search_tools.py  service.py  specialized_agents.py
backend/app/agent/router/: classifier.py  registry.py  types.py
backend/app/agent/utils/: cache.py
backend/app/api/: agent.py  explore.py  lan_sync.py  people.py  photos.py  privacy.py  stories.py  summaries.py  utilities.py
backend/app/api/albums/: __init__.py  memories.py  places.py  utils.py
backend/app/api/nle/: __init__.py  clips.py  export.py  preview.py  projects.py  video_proxy.py
backend/app/api/photos/: __init__.py  directory.py  export.py  favorite.py  inpaint.py  listing.py  (+7 more)
backend/app/middleware/: cors.py  logging.py  security.py
backend/app/routes/: hls.py  media.py  photos.py  system.py
backend/app/services/: __init__.py  ai_orchestrator.py  background_service.py  content_classifier.py  face_clustering.py  face_detection.py  face_recognition.py  face_sdk.py  face_tracker.py  face_utils.py  lan_sync.py  locked_service.py  nle_engine.py  nle_preview.py  nle_proxy.py  object_detection.py  place_service.py  portrait_service.py  processing_queue.py  semantic_service.py  story_service.py  subtitle_gen.py  sync_service.py  video_export.py  vision_pipeline.py  xmp_service.py
backend/app/utils/: image.py  mounts.py  rate_limit.py  security.py  video.py
backend/scripts/: smoke_test_inference.py  test_vision_gguf.py
backend/tests/: conftest.py  test_agent.py  test_albums.py  test_architecture_fixes.py  test_background_jobs_status.py  test_batch_rename.py  test_browser_locations.py  test_dir_list.py  test_explore_features.py  test_face_clustering.py  test_image_summary.py  test_lightbox_features.py  test_locked_folder.py  test_media_routes.py  test_migration.py  test_other_apis.py  test_pending_faces_api.py  test_photos_api.py  test_security.py  test_services.py  test_utils.py  test_video_nle_apis.py  test_vision_pipeline.py  test_vision_pipeline_real.py
(+564 files in other folders)
