[project]
name = "prism-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.22.1",
    "httpx>=0.28.0",
    "chromadb>=1.5.8",
    "duckduckgo-search>=8.1.1",
    "fastapi>=0.136.0",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-core>=0.3.0",
    "langchain-google-genai>=4.2.2",
    "langchain-openai>=0.2.0",
    "langgraph>=1.1.9",
    "numpy>=2.4.4",
    "opencv-python-headless>=4.13.0.92",
    "pillow>=12.2.0",
    "pillow-heif>=1.3.0",
    "psutil>=7.2.2",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.26",
    "reverse-geocoder>=1.5.1",
    "sentence-transformers>=5.4.1",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.44.0",
    "watchdog>=6.0.0",
    "wikipedia>=1.4.0",
    "retina-face>=0.0.17",
    "llama-cpp-python>=0.3.23",
    "huggingface-hub>=1.11.0",
    "rembg[cpu]>=2.0.57",
    "onnxruntime>=1.16.0",
    "loguru>=0.7.3",
    "inspireface>=1.2.3.post5",
    "scipy>=1.11.0",
    "diffusers>=0.37.1",
    "accelerate>=1.13.0",
    "kornia>=0.8.3",
    "simple-lama-inpainting>=0.1.0",
    "timm>=1.0.27",
    "einops>=0.8.2",
]
[project.scripts]
start = "uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
