[project]
name = "prism-backend"
version = "0.1.0"
description = "FastAPI backend for Prism local-first photo library"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.22.1",
    "httpx>=0.28.0",
    "fastapi>=0.136.0",
    "numpy>=2.4.4",
    "opencv-python-headless>=4.13.0.92",
    "pillow>=12.2.0",
    "pillow-heif>=1.3.0",
    "rawpy>=0.21.0",
    "psutil>=7.2.2",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.26",
    "reverse-geocoder>=1.5.1",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.44.0",
    "watchdog>=6.0.0",
    "zeroconf>=0.131.0",
    "loguru>=0.7.3",
    "argon2-cffi>=25.1.0",
    "cryptography>=44.0.0",
    "torch>=2.0.0",
    "onnxruntime>=1.24.4",
    "transformers>=5.13.0",
    "inspireface>=1.2.3.post5",
]

[project.optional-dependencies]
inpaint = [
    "diffusers>=0.37.1",
    "accelerate>=1.13.0",
    "simple-lama-inpainting>=0.1.0",
]
face = [
    "inspireface>=1.2.3.post5",
]
rembg = [
    "onnxruntime>=1.16.0",
]
[project.scripts]
start = "uvicorn app.main:app --host 0.0.0.0 --port 8269 --reload"
prism = "prism_cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
